ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "test"
    http:
      paths:
      - pathType: Prefix
        path: "/tools"
        backend:
          service:
            name: tool-warehouse
            port:
              number: 9000
